infra/k8s/query-depl.yaml
apiVersion: apps/v1 
metadata: 
    name: query-depl
kind: Deployment 
spec: 
    replicas: 1 
    selector: 
        matchLabels: 
            app: query
    template: 
        metadata: 
            labels: 
                app: query
        spec: 
            containers:
              - name: query
                image: karanshreds/query
---
apiVersion: v1
metadata: 
    name: query-srv
kind: Service 
spec: 
    type: ClusterIP
    selector: 
        app: query
    ports: 
        - name: query
          port: 4002
          targetPort: 4002
          protocol: TCP
